Added Authentication and Authorization logic

--- a/Book_Store_API/appsettings.json
+++ b/Book_Store_API/appsettings.json
@@ -9,5 +9,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "key": "226ed161-cc26-4de7-ad03-f95d96134d74",
+    "Issuer": "test.com"
+  }
 }
