--- a/Book_Store_API/nlog.config
+++ b/Book_Store_API/nlog.config
@@ -3,7 +3,7 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="Trace"
-      internalLogFile="C:/Users/Admin/source/repos/logs/internallog.txt">
+      internalLogFile="${basedir}/logs/internallog.txt">
 
   <targets>
     <target name="logfile" xsi:type="File"
